// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieItem component matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-htwhyh"
  >
    <div
      class="ant-card-cover"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w500test/image"
      />
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-card-meta"
      >
        <div
          class="ant-card-meta-detail"
        >
          <div
            class="ant-card-meta-title"
          >
            test/title
          </div>
          <div
            class="ant-card-meta-description"
          >
            test/overview
          </div>
        </div>
      </div>
    </div>
    <ul
      class="ant-card-actions"
    >
      <li
        style="width: 100%;"
      >
        <span>
          <div />
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`MovieItem component matches snapshot with NoImage 1`] = `
<DocumentFragment>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-htwhyh"
  >
    <div
      class="ant-card-cover"
    >
      <div
        class="ant-card-cover--no-image"
      >
        <img
          alt=""
          src="test-file-stub"
        />
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-card-meta"
      >
        <div
          class="ant-card-meta-detail"
        >
          <div
            class="ant-card-meta-title"
          >
            test/title
          </div>
          <div
            class="ant-card-meta-description"
          >
            test/overview
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
